--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint ./src && npx stylelint '**/*.scss'",
-    "create-component": "node ./helpers/createComponent.js",
-    "create-layout": "node ./helpers/createLayout.js"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": [
     "cover 99.5%"
@@ -20,6 +20,7 @@
     "eslint": "^9.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "gh-pages": "^6.1.1",
     "globals": "^15.2.0",
     "prettier": "^3.2.5",
     "sass": "^1.77.1",
